jdk11 build: Fixed a deprecation and missing @PostConstruct annotation